--- a/index.html
+++ b/index.html
@@ -1,42 +1,152 @@
 <!DOCTYPE html>
-<html>
-    <meta charset="UTF-8">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="./style.css/style.css">
-</html>
-<body>
-    <h1>Calculator</h1>
-    <form name="calculator">
-        <table>
-            <tr>
-                <td colspan="4">
-                    <input type="text" name="display" id="display" disabled placeholder="0">
-                </td>
-            </tr>
-            <tr>
-                <td><input type="button" name="seven" value="7" onclick="calculator.display.value += '7'"></td>
-                <td><input type="button" name="eight" value="8" onclick="calculator.display.value += '8'"></td>
-                <td><input type="button" name="nine" value="9" onclick="calculator.display.value += '9'"></td>
-                <td><input type="button" name="times" class="operator" value="x" onclick="calculator.display.value += '*'"></td>
-            </tr>
-            <tr>
-                <td><input type="button" name="four" value="4" onclick="calculator.display.value += '4'"></td>
-                <td><input type="button" name="five" value="5" onclick="calculator.display.value += '5'"></td>
-                <td><input type="button" name="six" value="6" onclick="calculator.display.value += '6'"></td>
-                <td><input type="button" name="minus" class="operator" value="-" onclick="calculator.display.value += '-'"></td>
-            </tr>
-            <tr>
-                <td><input type="button" name="one" value="1" onclick="calculator.display.value += '1'"></td>
-                <td><input type="button" name="two" value="2" onclick="calculator.display.value += '2'"></td>
-                <td><input type="button" name="three" value="3" onclick="calculator.display.value += '3'"></td>
-                <td><input type="button" name="plus" class="operator" value="+" onclick="calculator.display.value += '+'"></td>
-            </tr>
-            <tr>
-                <td><input type="button" name="clear" value="c" onclick="calculator.display.value = ''"></td>
-                <td><input type="button" name="zero" value="0" onclick="calculator.display.value += '0'"></td>
-                <td><input type="button" name="doit" value="=" onclick="calculator.display.value = eval(calculator.display.value)"></td>
-                <td><input type="button" name="div" class="operator" value="/" onclick="calculator.display.value += '/'"></td>
-            </tr>
-        </table>
-    </form>
-</body> 
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <script type="text/javascript" async="" src="https://widget.intercom.io/widget/y1dork2q"></script><script async="" src="./Login_files/js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LLDXYQW5ZD');
+  </script>
+
+
+    <title>Login</title>
+    <meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="/NRGh/v3YB5OyHtm1KS2PxQzznN4DLFBG+K7lkJVk2My7IqV7ca+gmIs1AVXzI2iaBlKSGi9bTQBKebG6GOLeg==">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="./Login_files/css2" rel="stylesheet">
+    <link rel="stylesheet" media="all" href="./Login_files/application-d599de18a2d83816d9cd4a283e7128902d83494f6b799775fb58833c8f26e68d.css">
+    <!-- <script src="./Login_files/application-b5231713303204d796a17d412c201885774f3860a0daab33a382585e5d201afc.js.Без названия"></script> -->
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="https://clerksy.co/assets/favicon/favicon-e17f8d3fd3c2afb9ac06140befc8a0637fa26729e4656e16f1c608576cd226a6.ico"> -->
+
+
+  </head>
+
+  <body>
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="va-center">
+            <div class="col-5">
+              <a href="#">
+                <img class="logo" alt="Clerksy Logo" src="./img/logonut_com_MDMxNjA1MTgzNjI.png" width="200px">
+</a>            </div>
+            <div class="col-7 links">
+              <a class="text-link" href="#">Log In</a>
+              <a class="text-link"  href="tel:+998992041431">+998(99)024-43-31</a>
+              <a class="btn btn-primary" href="#">Get Started</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 mobile-links">
+            <a href="#">Log In</a>
+            <a href="tel:+998992041431">+998(99)024-43-31</a>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <section class="text-pg text-pg--login">
+  <div class="container">
+    <div class="row">
+      <div class="va-center">
+        <div class="col-6">
+          <img class="responsive center-img login-img" alt="Clerksy Login" src="./img/Untitled-1.png" >
+        </div>
+        <div class="offset-1 col-5">
+            <h1>Log In To Ecodrawer</h1>
+          <form class="contact-form" action="https://clerksy.co/index.html" method="post">
+            <div class="form-item">
+              <p class="form-item__question">Email:</p>
+              <input class="form-input" type="email" placeholder="Enter your email">
+            </div>
+            <div class="form-item">
+              <p class="form-item__question">Password:</p>
+              <input class="form-input" type="text" placeholder="Password">
+            </div>
+            <button type="button" name="button" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+    <section class="newsletter">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <h2>Stay up to date!</h2>
+        <p>Sign up for the latest Ecodrawer news.</p>
+      </div>
+      <div class="col-6">
+        <form action="https://clerksy.us14.list-manage.com/subscribe/post?u=9cc0f3381b4749677cb2f2238&amp;id=5f46e48318" method="post" target="_blank" novalidate="">
+          <div class="inline-input">
+            <input type="email" name="EMAIL" value="" placeholder="Enter Your Email">
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+          </div>
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9cc0f3381b4749677cb2f2238_5f46e48318" tabindex="-1" value=""></div>
+        </form>
+        <p class="small">By submitting your email you agree to receive updates about Ecodrawer. You can unsubscribe at any time. View our full <a class="text-link" href="#">Privacy Policy</a>.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+    <footer>
+      <div class="container">
+        <div class="row footer__top">
+          <div class="va-center">
+            <div class="col-4">
+              <img class="logo" alt="Clerksy Logo" src="./img/logonut_com_MDMxNjA1MTgzNjI.png">
+            </div>
+            <div class="col-4 text-center">
+              <p class="footer__tag">A people company.</p>
+            </div>
+            <div class="col-4 footer__social">
+              <div class="va-center">
+                <a target="_blank" href="#"><img class="social-link" alt="Clerksy Facebook" src="./Login_files/facebook-50617336726298c60b382b3047bed467cd749aaa8a2d280c2e2f8ae951bddbcf.svg"></a>
+                <a target="_blank" href="#"><img class="social-link" alt="Clerksy Twitter" src="./Login_files/twitter-2a6701c6d32decf529ff657a31e1103ef9430a4c10cce6aad38c011dee83b954.svg"></a>
+                <a target="_blank" href="#"><img class="social-link" alt="Clerksy LinkedIn" src="./Login_files/linkedin-a9d58d9a751a01b6adf77d69b681a666ce305cfe2afaf213024278e4713acf3a.svg"></a>
+                <a target="_blank" href="#"><img class="social-link" alt="Clerksy Facebook" src="./Login_files/instagram-39d094893fc0c4d07867b4b2efd02b7b21efd1686cecf36a885eeb5e47416b4d.svg"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row footer__bottom">
+          <div class="va-center">
+            <div class="col-6">
+              <p class="small">© 2022 Ecodrawer, Inc. Ecodrawer is a registered trademark of Ecodrawer, Inc.</p>
+            </div>
+            <div class="col-6 footer__links">
+              <a class="footer-link text-link" href="#">Privacy Policy</a>
+              <a class="footer-link text-link" href="#">Terms of Service</a>
+              <a class="footer-link text-link" href="#">GDPR</a>
+              <a target="_blank" class="footer-link text-link" href="#">Careers</a>
+              <a class="footer-link text-link" href="#">Press Kit</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="./Login_files/simpleParallax.min.js.Без названия"></script>
+      <script type="text/javascript" id="hs-script-loader" async="" defer="" src="./Login_files/8807291.js.Без названия"></script>
+
+      <script>
+    window.intercomSettings = {
+      app_id: "y1dork2q"
+    };
+  </script>
+
+  <script>
+  (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/y1dork2q';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+  </script>
+
+  
+
+</body></html>
