--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="row">
           <div class="va-center">
             <div class="col-5">
-              <a href="#">
+              <a href="https://ecodrawer.netlify.app/">
                 <img class="logo" alt="Clerksy Logo" src="./img/logonut_com_MDMxNjA1MTgzNjI.png" width="200px">
 </a>            </div>
             <div class="col-7 links">
-              <a class="text-link" href="#">Log In</a>
+              <a class="text-link" href="https://ecodrawer-login.netlify.app/">Log In</a>
               <a class="text-link"  href="tel:+998992041431">+998(99)024-43-31</a>
               <a class="btn btn-primary" href="#">Get Started</a>
             </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
           <div class="col-12 mobile-links">
-            <a href="#">Log In</a>
+            <a href="https://ecodrawer-login.netlify.app/">Log In</a>
             <a href="tel:+998992041431">+998(99)024-43-31</a>
             <a href="#">Get Started</a>
           </div>
